# stolcke-pcfg

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  FINAL_COMPARISON_SUMMARY.md  Makefile  PERFORMANCE_FINDINGS.md  README.md  README_TOKENIZATION_SOLUTION.md  SOLUTION_SUMMARY.md  mkdocs.yml  pyproject.toml
adapter/: index.html
architecture/: index.html
benchmarks/: README.md  deep_performance_analysis.py  earley_comparison.py  fixed_llguidance_comparison.py  llguidance_comparison.py  minimal_llguidance_test.py  performance_profiler.py  proper_llguidance_comparison.py  run_quick_benchmark.py  simple_llguidance_test.py  tokenization_benchmark.py  tokenization_benchmark_report.md  visualize_results.py  working_llguidance_test.py
cli/: index.html
development/: index.html
docs/: ALGORITHM_WALKTHROUGH.md  ROBUST_ADAPTER_DESIGN.md  USAGE_GUIDE.md  adapter.md  api.md  architecture.md  cli.md  constrained_decoding.md  development.md  examples.md  grammar.md  index.md  json_constraints.md  performance_benchmarking_methodology.md  speed_optimization_roadmap.md  unit_transform.md
examples/: demo_prefix_prob.py  hf_constrained_decoding.py  hf_json_demo.py  json_constraints_demo.py  json_success_demo.py  realistic_json_demo.py  robust_hf_generation.py  robust_json_demo.py  simple_json_demo.py  tokenization_resistant_demo.py  working_json_demo.py
grammar/: index.html
site/: index.html  sitemap.xml
tests/: test_coordination.py  test_eps_unit.py  test_hf_logits.py  test_nl_grammar.py  (+4 more)
(+16 files in other folders)
